--- a/res/layout/choose_area.xml
+++ b/res/layout/choose_area.xml
@@ -2,8 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-
+    android:orientation="vertical"
+    android:id="@+id/tv" >
+	
+   
+    
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="50dp"
