--- a/res/layout/weather_layout.xml
+++ b/res/layout/weather_layout.xml
@@ -114,5 +114,16 @@
     
 </RelativeLayout>
 
-
+ <RelativeLayout 
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:background="#27A5F9">
+	<Button 
+		android:id="@+id/locate_self_btn"
+		android:layout_width="30dp"
+		android:layout_height="30dp"
+		android:layout_centerInParent="true"
+		android:background="@drawable/locate_self"/>
+		
+</RelativeLayout>
 </LinearLayout>
